@@ -1,3 +1,6 @@
+8/12/11
+  Fix for fullscreen mode flicker
+
 28/11/11
   Replaced next/prev_desktop function with shorter rotate_desktop function
   (thanks to c00kiemon5ter)
